--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -86,7 +86,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="@string/_13"
+            android:text="@string/age_limitation"
+            android:background="@drawable/age_limitation_background"
             android:textColor="@color/white"
             android:textSize="14sp"
             android:textStyle="bold"
@@ -230,111 +231,103 @@
             app:layout_constraintStart_toEndOf="@id/guideline_start"
             app:layout_constraintTop_toBottomOf="@id/storyline_text" />
 
-        <ScrollView
+        <ImageView
+            android:id="@+id/cast_1"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            app:layout_constraintStart_toEndOf="@id/guideline_start"
+            app:layout_constraintTop_toBottomOf="@id/cast"
+            android:contentDescription="@string/robert_downey_jr"
+            android:src="@mipmap/robert_downey_jr" />
+
+        <TextView
+            android:id="@+id/cast_text_1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="7dp"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toStartOf="@id/guideline_end"
-            app:layout_constraintStart_toStartOf="@id/cast"
-            app:layout_constraintTop_toBottomOf="@id/cast">
+            android:layout_marginTop="@dimen/margin_between_img_and_text_in_cast"
+            app:layout_constraintStart_toStartOf="@id/cast_1"
+            app:layout_constraintEnd_toEndOf="@id/cast_1"
+            app:layout_constraintTop_toBottomOf="@id/cast_1"
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+            android:lines="2"
+            android:text="@string/robert_downey_jr"
+            android:textColor="@color/casts_color"
+            android:textSize="12sp"
+            android:textStyle="bold" />
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+        <ImageView
+            android:id="@+id/cast_2"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toEndOf="@id/cast_1"
+            app:layout_constraintTop_toTopOf="@id/cast_1"
+            android:contentDescription="@string/chris_evans"
+            android:src="@mipmap/chris_evans" />
 
-                    <ImageView
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:contentDescription="@string/robert_downey_jr"
-                        android:src="@mipmap/robert_downey_jr" />
+        <TextView
+            android:id="@+id/cast_text_2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_between_img_and_text_in_cast"
+            app:layout_constraintStart_toStartOf="@id/cast_2"
+            app:layout_constraintEnd_toEndOf="@id/cast_2"
+            app:layout_constraintTop_toBottomOf="@id/cast_2"
+            android:lines="2"
+            android:text="@string/chris_evans"
+            android:textColor="@color/casts_color"
+            android:textSize="12sp"
+            android:textStyle="bold" />
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="6dp"
-                        android:lines="2"
-                        android:text="@string/robert_downey_jr"
-                        android:textColor="@color/casts_color"
-                        android:textSize="12sp"
-                        android:textStyle="bold" />
-                </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:orientation="vertical">
+        <ImageView
+            android:id="@+id/cast_3"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toEndOf="@id/cast_2"
+            app:layout_constraintTop_toTopOf="@id/cast_2"
+            android:contentDescription="@string/mark_ruffalo"
+            android:src="@mipmap/mark_ruffalo" />
 
-                    <ImageView
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:contentDescription="@string/chris_evans"
-                        android:src="@mipmap/chris_evans" />
+        <TextView
+            android:id="@+id/cast_text_3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_between_img_and_text_in_cast"
+            app:layout_constraintStart_toStartOf="@id/cast_3"
+            app:layout_constraintEnd_toEndOf="@id/cast_3"
+            app:layout_constraintTop_toBottomOf="@id/cast_3"
+            android:lines="2"
+            android:text="@string/mark_ruffalo"
+            android:textColor="@color/casts_color"
+            android:textSize="12sp"
+            android:textStyle="bold" />
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="6dp"
-                        android:lines="2"
-                        android:text="@string/chris_evans"
-                        android:textColor="@color/casts_color"
-                        android:textSize="12sp"
-                        android:textStyle="bold" />
-                </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:orientation="vertical">
 
-                    <ImageView
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:contentDescription="@string/mark_ruffalo"
-                        android:src="@mipmap/mark_ruffalo" />
+        <ImageView
+            android:id="@+id/cast_4"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toEndOf="@id/cast_3"
+            app:layout_constraintTop_toTopOf="@id/cast_3"
+            android:contentDescription="@string/chris_hemsworth"
+            android:src="@mipmap/chris_hemsworth" />
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="6dp"
-                        android:lines="2"
-                        android:text="@string/mark_ruffalo"
-                        android:textColor="@color/casts_color"
-                        android:textSize="12sp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:contentDescription="@string/chris_hemsworth"
-                        android:src="@mipmap/chris_hemsworth" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="6dp"
-                        android:lines="2"
-                        android:text="@string/chris_hemsworth"
-                        android:textColor="@color/casts_color"
-                        android:textSize="12sp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-            </LinearLayout>
-        </ScrollView>
+        <TextView
+            android:id="@+id/cast_text_4"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_between_img_and_text_in_cast"
+            app:layout_constraintStart_toStartOf="@id/cast_4"
+            app:layout_constraintEnd_toEndOf="@id/cast_4"
+            app:layout_constraintTop_toBottomOf="@id/cast_4"
+            android:lines="2"
+            android:text="@string/chris_hemsworth"
+            android:textColor="@color/casts_color"
+            android:textSize="12sp"
+            android:textStyle="bold" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
