add missed opacity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,5 @@
     <color name="opacity_white">#BFFFFFFF</color>
     <color name="casts_color">#D8D8D8</color>
     <color name="inactive_star_color">#6D6D80</color>
-    <color name="age_limit_background_color">#191926</color>
+    <color name="age_limit_background_color">#E6191926</color>
 </resources>
