--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -169,7 +169,7 @@
 
         <TextView
             android:id="@+id/number_of_reviews"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="8dp"
@@ -178,7 +178,8 @@
             android:textColor="@color/third_main_color"
             app:layout_constraintTop_toTopOf="@+id/review_star1"
             app:layout_constraintBottom_toBottomOf="@id/review_star1"
-            app:layout_constraintStart_toEndOf="@+id/review_star5" />
+            app:layout_constraintStart_toEndOf="@+id/review_star5"
+            app:layout_constraintEnd_toStartOf="@id/guideline_end"/>
 
 
         <TextView
