--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -127,8 +127,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="3dp"
             android:src="@drawable/ic_star"
-            app:layout_constraintTop_toTopOf="@+id/number_of_reviews"
-            app:layout_constraintBottom_toBottomOf="@id/number_of_reviews"
+            app:layout_constraintTop_toTopOf="@+id/review_star1"
+            app:layout_constraintBottom_toBottomOf="@id/review_star1"
             app:layout_constraintStart_toEndOf="@+id/review_star1" />
 
         <ImageView
@@ -137,8 +137,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="3dp"
             android:src="@drawable/ic_star"
-            app:layout_constraintTop_toTopOf="@+id/number_of_reviews"
-            app:layout_constraintBottom_toBottomOf="@id/number_of_reviews"
+            app:layout_constraintTop_toTopOf="@+id/review_star1"
+            app:layout_constraintBottom_toBottomOf="@id/review_star1"
             app:layout_constraintStart_toEndOf="@+id/review_star2" />
 
         <ImageView
@@ -147,8 +147,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="3dp"
             android:src="@drawable/ic_star"
-            app:layout_constraintTop_toTopOf="@+id/number_of_reviews"
-            app:layout_constraintBottom_toBottomOf="@id/number_of_reviews"
+            app:layout_constraintTop_toTopOf="@+id/review_star1"
+            app:layout_constraintBottom_toBottomOf="@id/review_star1"
             app:layout_constraintStart_toEndOf="@+id/review_star3" />
 
         <ImageView
@@ -158,8 +158,8 @@
             android:layout_marginStart="3dp"
             android:src="@drawable/ic_star"
             app:tint="@color/inactive_star_color"
-            app:layout_constraintTop_toTopOf="@+id/number_of_reviews"
-            app:layout_constraintBottom_toBottomOf="@id/number_of_reviews"
+            app:layout_constraintTop_toTopOf="@+id/review_star1"
+            app:layout_constraintBottom_toBottomOf="@id/review_star1"
             app:layout_constraintStart_toEndOf="@+id/review_star4"/>
 
         <TextView
@@ -186,7 +186,7 @@
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/guideline_start"
             app:layout_constraintEnd_toStartOf="@id/guideline_end"
-            app:layout_constraintTop_toBottomOf="@id/review_star1" />
+            app:layout_constraintTop_toBottomOf="@id/number_of_reviews" />
 
         <TextView
             android:id="@+id/storyline_text"
@@ -225,8 +225,7 @@
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toStartOf="@id/cast_2"
             app:layout_constraintStart_toEndOf="@id/guideline_start"
-            app:layout_constraintTop_toBottomOf="@id/cast"
-            app:layout_constraintHorizontal_chainStyle="spread_inside"/>
+            app:layout_constraintTop_toBottomOf="@id/cast"/>
 
         <ImageView
             android:id="@+id/cast_2"
@@ -292,7 +291,6 @@
             android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@id/cast_2"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@id/cast_2"
             app:layout_constraintTop_toTopOf="@+id/cast_text_1" />
 
