--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="movie_details_main_margin">16dp</dimen>
+    <dimen name="margin_between_img_and_text_in_cast">6dp</dimen>
 </resources>
