--- a/app/src/main/res/layout/fragment_movies_details.xml
+++ b/app/src/main/res/layout/fragment_movies_details.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".MovieDetailsActivity">
+    tools:context=".MoviesActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_end="@dimen/movie_details_main_margin"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <ImageView
             android:id="@+id/movie_background_billboard"
@@ -41,7 +41,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/orig" />
+            app:srcCompat="@drawable/avengers_end_game_movie_details_background" />
 
         <ImageView
             android:id="@+id/back_button_arrow"
@@ -85,7 +85,7 @@
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/guideline_start"
             app:layout_constraintTop_toBottomOf="@+id/guideline_top"
-            tools:ignore="MissingConstraints" />
+            />
 
         <TextView
             android:id="@+id/movie_title"
@@ -99,7 +99,7 @@
             app:layout_constraintStart_toEndOf="@id/guideline_start"
             app:layout_constraintEnd_toStartOf="@id/guideline_end"
             app:layout_constraintTop_toBottomOf="@+id/guideline_top"
-            tools:ignore="MissingConstraints" />
+            />
 
         <TextView
             android:id="@+id/tags"
