add click listener, add backstack navigation, handle device rotation

--- a/app/src/main/res/drawable/movie_card_background.xml
+++ b/app/src/main/res/drawable/movie_card_background.xml
@@ -19,9 +19,9 @@
         android:top="1dp"/>
     <item android:bottom="48dp">
         <shape>
-            <gradient android:centerColor=""
-                android:endColor="#191926">
-
+            <gradient android:centerColor="#00191926"
+                android:endColor="#191926"
+                android:angle="270">
             </gradient>
         </shape>
     </item>
