--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="age_limit_background_color">#191926</color>
+    <color name="background">#191926</color>
+    <color name="back_button_text_color">#80FFFFFF</color>
+    <color name="second_main_color">#FF3466</color>
+    <color name="third_main_color">#6D6D80</color>
+    <color name="opacity75_white">#BFFFFFFF</color>
+    <color name="cast_text_color">#D8D8D8</color>
 </resources>
